--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^6.9",
         "staudenmeir/belongs-to-through": "^2.5",
         "tymon/jwt-auth": "^2.1"
     },
